create and update banner funcs
