# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /api
 definitions:
+  model.CreateBanner:
+    properties:
+      content:
+        $ref: '#/definitions/model.UserBanner'
+      feature_id:
+        type: integer
+      is_active:
+        type: boolean
+      tag_ids:
+        items:
+          type: integer
+        type: array
+    type: object
   model.Error:
     properties:
       error: {}
@@ -31,12 +44,73 @@ info:
   title: Banner Service API
   version: "1.0"
 paths:
-  /filldb:
+  /banner:
     post:
       consumes:
       - application/json
-      description: Заполнение базы тестовыми данными
-      operationId: fillDB
+      description: Создание нового баннера
+      operationId: createBanner
+      parameters:
+      - description: Banner params
+        in: body
+        name: banner
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateBanner'
+      - description: token
+        in: header
+        name: token
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Некорректные данные
+          schema:
+            $ref: '#/definitions/model.Error'
+        "401":
+          description: Пользователь не авторизован
+          schema:
+            $ref: '#/definitions/model.Error'
+        "403":
+          description: Пользователь не имеет доступа
+          schema:
+            $ref: '#/definitions/model.Error'
+        "404":
+          description: Не найдено
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Создание нового баннера
+  /banner/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Обновление содержимого баннера
+      operationId: updateBanner
+      parameters:
+      - description: Banner params
+        in: body
+        name: banner
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateBanner'
+      - description: token
+        in: header
+        name: token
+        type: string
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -44,6 +118,56 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Response'
+        "400":
+          description: Некорректные данные
+          schema:
+            $ref: '#/definitions/model.Error'
+        "401":
+          description: Пользователь не авторизован
+          schema:
+            $ref: '#/definitions/model.Error'
+        "403":
+          description: Пользователь не имеет доступа
+          schema:
+            $ref: '#/definitions/model.Error'
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            $ref: '#/definitions/model.Error'
+      summary: Обновление содержимого баннера
+  /filldb:
+    post:
+      consumes:
+      - application/json
+      description: Заполнение базы тестовыми данными
+      operationId: fillDB
+      parameters:
+      - description: tag_count
+        in: query
+        name: tag_count
+        required: true
+        type: integer
+      - description: feature_count
+        in: query
+        name: feature_count
+        required: true
+        type: integer
+      - description: banner_count
+        in: query
+        name: banner_count
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Некорректные данные
+          schema:
+            $ref: '#/definitions/model.Error'
         "500":
           description: Внутренняя ошибка сервера
           schema:
